# karabo-ml

./: .env.example  .gitignore  CASE_STUDY.md  Dockerfile  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  test-runner.yml
k3s/: kb-cli.yaml  kb-web.yaml
src/kb/: __init__.py  __main__.py  cli.py  client.py  config.py  logger.py
src/kb/commands/: cluster.py  completions.py  config.py  drift.py  model.py  rag.py  tui.py
src/kb/tui/: __init__.py  app.py
tests/: test_cli.py
web/: main.py
web/templates/: index.html
