[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karabo-ml"
version = "0.2.0"
description = "kb — DevOps RAG Assistant CLI. Query docs, check clusters, manage infra."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Karabo Oliphant", email = "karabooliphant34@gmail.com" },
]

keywords = ["devops", "rag", "cli", "kubernetes", "platform-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "textual>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/DynamicKarabo/karabo-ml"
Repository = "https://github.com/DynamicKarabo/karabo-ml"
Documentation = "https://github.com/DynamicKarabo/karabo-ml#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "build>=1.0.0",
]
web = [
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.41.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
kb = "kb.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kb"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
